<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateNewEventActivity" >

    <EditText
        android:id="@+id/edit_Name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/txt_event_name"
        android:paddingTop="10dp" >

        <requestFocus />
    </EditText>



    <EditText
        android:id="@+id/edit_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_Name"
        android:layout_below="@+id/edit_Name"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_event_description" />

    <EditText
        android:id="@+id/edit_Venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_Description"
        android:layout_below="@+id/edit_Description"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/txt_event_venue" />
    
    <AutoCompleteTextView 
   	    android:id="@+id/autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_Name"
        android:layout_below="@+id/edit_Venue"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_event_address"  />

    <LinearLayout
        android:id="@+id/edit_Location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autocomplete"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/edit_Venue"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:weightSum="2" >

        <EditText
            android:id="@+id/edit_Longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_event_longitude" />

        <EditText
            android:id="@+id/edit_Latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_event_latitude" />
        

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:onClick="createEvent"
        android:text="@string/btn_create_event" />
    
</RelativeLayout>